# deployment-study-group

./: .gitignore  README.md  algorithm.py  pyproject.toml
.githooks/: pre-push  setup_githooks.sh
.github/: quiz_answers.json
.github/scripts/: backup.py  check_quizzes.py  validate_quiz.py
.github/workflows/: quiz-validator.yml  test.yml  workflow.yml
exercises/code/: module1.ipynb  module2.ipynb
exercises/theory/: module1.md  module2.md  module3.md  module4.md  module5.md
restock_calculator/files/: input_data.json
restock_calculator/lib/: algorithm.py  utils.py
theory/: docker.md  github.md  module1.md  module2.md  module3.md  module6.md  setup.md
