[tool.poetry]
name = "deployment-study-group"
version = "0.1.0"
description = ""
authors = ["SimoneParvizi <simone.parvizi@outlook.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.3.3"
requests = "^2.32.3"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
